--- a/.gitignore
+++ b/.gitignore
@@ -73,3 +73,4 @@ Thumbs.db
 
 build-Monopoly-Desktop_Qt_5_12_0_MinGW_64_bit-Debug/.qmake.stash
 *.JPG
+build-Monopoly-Desktop_Qt_5_12_0_MinGW_64_bit-Profile/.qmake.stash
